try to add plugin

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,8 +12,7 @@ cache:
     - target/
 test:
   stage: test
-  before_script:
-    - "Xvfb :99 &"
-    - "export DISPLAY=:99"
-  script: mvn test
+  script:
+    - mvn test
+    - mvn prepare-package
 
