--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ image: markhobson/maven-chrome:jdk-15
 
 stages:
   - test
+  - deploy
 
 variables:
   MAVEN_OPTS: "-Dhost"
@@ -27,3 +28,17 @@ testFail:
     - selenium/standalone-chrome
   script:
     - mvn test $MAVEN_FAIL $MAVEN_OPTS=selenium__standalone-chrome
+
+
+deploy:
+  stage: deploy
+  image: google/cloud-sdk
+  only:
+    - master
+  services:
+    - docker:dind
+  script:
+    - echo $GCP_SERVICE_KEY > gcloud-service-key.json # Google Cloud service accounts
+    - gcloud auth activate-service-account --key-file gcloud-service-key.json
+    - gcloud builds submit -t gcr.io/$GCP_PROJECT_ID/build .
+    - gcloud run deploy eshka-front --image gcr.io/$GCP_PROJECT_ID/build --region us-central1 --platform managed --allow-unauthenticated
