--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,7 @@ testFail:
     - selenium/standalone-chrome
   script:
     - mvn test $MAVEN_FAIL $MAVEN_OPTS=selenium__standalone-chrome
-    allow_failure: true
+  allow_failure: true
 
 
 deploy:
@@ -41,5 +41,5 @@ deploy:
   script:
     - echo $GCP_SERVICE_KEY > gcloud-service-key.json # Google Cloud service accounts
     - gcloud auth activate-service-account --key-file gcloud-service-key.json
-    - gcloud builds submit -t gcr.io/$GCP_PROJECT_ID/build .
-    - gcloud run deploy eshka-front --image gcr.io/$GCP_PROJECT_ID/build --region us-central1 --platform managed --allow-unauthenticated
+    - gcloud config set project $GCP_PROJECT_ID
+    - gcloud builds submit . --config=cloudbuild.yaml
