--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,7 +2,6 @@ image: markhobson/maven-chrome:jdk-15
 
 stages:
   - test
-  - deploy
 
 variables:
   MAVEN_OPTS: "-Dhost"
@@ -30,15 +29,15 @@ testFail:
   script:
     - mvn test $MAVEN_FAIL $MAVEN_OPTS=selenium__standalone-chrome
 
-deploy:
-  stage: deploy
-  image: google/cloud-sdk
-  only:
-    - master
-  services:
-    - docker:dind
-  script:
-    - echo $GCP_SERVICE_KEY > gcloud-service-key.json # Google Cloud service accounts
-    - gcloud auth activate-service-account --key-file gcloud-service-key.json
-    - gcloud config set project $GCP_PROJECT_ID
-    - gcloud builds submit . --config=cloudbuild.yaml
+#deploy:
+#  stage: deploy
+#  image: google/cloud-sdk
+#  only:
+#    - master
+#  services:
+#    - docker:dind
+#  script:
+#    - echo $GCP_SERVICE_KEY > gcloud-service-key.json # Google Cloud service accounts
+#    - gcloud auth activate-service-account --key-file gcloud-service-key.json
+#    - gcloud config set project $GCP_PROJECT_ID
+#    - gcloud builds submit . --config=cloudbuild.yaml
