--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,9 +37,8 @@ testFail:
 
 apiTest:
   stage: api
-  allow_failure: true
   script:
-    - mvn test $MAVEN_CLIENT_ID=$CLIENTID $MAVEN_CLIENT_SECRET=$CLIENT_SECRET $MAVEN_API_FOLDER
+    - mvn test $MAVEN_CLIENT_ID="$CLIENTID" $MAVEN_CLIENT_SECRET="$CLIENT_SECRET" $MAVEN_API_FOLDER
 
 #deploy:
 #  stage: deploy
